--- a/deliverables/ocata/cinder.yaml
+++ b/deliverables/ocata/cinder.yaml
@@ -53,3 +53,7 @@ releases:
     projects:
       - repo: openstack/cinder
         hash: 78d093b864e46dc847e507342c7b1f7d01233fea
+  - projects:
+      - hash: 486c00794b1401077bd0c9a6071135c149382958
+        repo: openstack/cinder
+    version: 10.0.6
